--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "react/jsx-one-expression-per-line": "off",
     "camelcase": "off",
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
